# graph-exercise

./: .gitignore  CMakeLists.txt  Makefile  README.md  adjlist_test.c  adjmatrix_test.c  list.c  list.h  list_test.c
adjlist/: adjlist.c  adjlist.h
adjmatrix/: adjmatrix.c  adjmatrix.h
include/: adjlist.h  linkedlist.h
list/: list.c  list.h
script/: measurements.eps  measurements.txt  plot.gp
src/: adjlist.c  linkedlist.c  main.c  run.c
test/: test_adjlist.c  test_adjmatrix.c  test_linkedlist.c
